pt-sf/main/default/objects/SF_DevOps__mdt/fields/Automate_Backups__c.field-meta.xml
<CustomField>
    <fullName>Automate_Backups__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Will tell the Nightly Task Scheduler to run a backup on the orgs listed.</description>
    <label>Automate Backups</label>
    <type>Checkbox</type>
</CustomField>