pt-sf/main/default/objects/SF_DevOps__mdt/fields/Devhub_Alias__c.field-meta.xml
<CustomField>
    <fullName>Devhub_Alias__c</fullName>
    <label>Devhub Alias</label>
    <length>255</length>
    <type>Text</type>
</CustomField>