pt-sf/main/default/objects/SF_DevOps__mdt/fields/Git_Repository_URL__c.field-meta.xml
<CustomField>
    <fullName>Git_Repository_URL__c</fullName>
    <description>Will be populated via Setup unless a different URL is specified.</description>
    <label>Git Repository URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>