pt-sf/main/default/objects/SF_DevOps__mdt/fields/Github_Username__c.field-meta.xml
<CustomField>
    <fullName>Github_Username__c</fullName>
    <description>Will be populated via Setup unless a different URL is specified.</description>
    <label>Github Username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>