pt-sf/main/default/objects/SF_DevOps__mdt/fields/Last_Data_Backup__c.field-meta.xml
<CustomField>
    <fullName>Last_Data_Backup__c</fullName>
    <description>Will set the LastModifiedDate filter for the backups meaning you get records where the SYSTEM LASTMODIFIEDDATE TIMESTAMPS changed (not indirect formula calculation changes)</description>
    <label>Last Data Backup</label>
    <type>DateTime</type>
</CustomField>