pt-sf/main/default/objects/SF_DevOps__mdt/fields/Last_Successful_Backup__c.field-meta.xml
<CustomField>
    <fullName>Last_Successful_Backup__c</fullName>
    <label>Last Successful Backup</label>
    <type>DateTime</type>
</CustomField>