pt-sf/main/default/objects/SF_DevOps__mdt/fields/PT_Project_Id__c.field-meta.xml
<CustomField>
    <fullName>PT_Project_Id__c</fullName>
    <description>The Pivotal Tracker Id for the Project for Salesforce Development.</description>
    <label>PT Project Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>