pt-sf/main/default/objects/SF_DevOps__mdt/fields/QA_Org_Alias__c.field-meta.xml
<CustomField>
    <fullName>QA_Org_Alias__c</fullName>
    <label>QA Org Alias</label>
    <length>255</length>
    <type>Text</type>
</CustomField>