pt-sf/main/default/objects/SF_DevOps__mdt/fields/Refresh_UnitTests_Nightly__c.field-meta.xml
<CustomField>
    <fullName>Refresh_UnitTests_Nightly__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Refresh UnitTests Nightly</label>
    <type>Checkbox</type>
</CustomField>