pt-sf/main/default/objects/SF_DevOps__mdt/fields/UnitTests_Org_Alias__c.field-meta.xml
<CustomField>
    <fullName>UnitTests_Org_Alias__c</fullName>
    <label>UnitTests Org Alias</label>
    <length>255</length>
    <type>Text</type>
</CustomField>